--- a/Projeto PWC/assets/css/style.css
+++ b/Projeto PWC/assets/css/style.css
@@ -64,3 +64,27 @@
     display: block;
     opacity: 1;
 }
+/*Tamanho dos slides do carrousel*/
+.slide-carrousel{
+    width: 100%;
+    height: 537px;
+}
+/*Defenir o tamnho das imagens a partir da resolução*/
+.aspect-ratio{
+
+    width: 246px;
+    height: 226px;
+}
+/*Background para o footer e para os slides*/
+.background-slide1{
+    background-color: #d9d9d9;
+}
+/*Background para o footer e para os slides*/
+.background-slide2{
+    background-color: #000;
+}
+/*Botão com a outline e o texto preto*/
+.btn-outline-secondary {
+    border-color: black !important;  
+    color: black !important;        
+}
