Criação das páginas: favoritos, paises, detalhes
Nestas páginas foram inseridas o footer e o header. Na página Paises foi desenvolvido algum conteudo, sendo ele a barra de pesquisa e os cards

--- a/Projeto PWC/assets/css/style.css
+++ b/Projeto PWC/assets/css/style.css
@@ -88,3 +88,7 @@
     border-color: black !important;  
     color: black !important;        
 }
+/*Barra de pesquisa*/
+.barra-de-pesquisa{
+    width: 415px;
+}
