manter os card sempre com a mesma height

--- a/Projeto PWC/assets/css/style.css
+++ b/Projeto PWC/assets/css/style.css
@@ -96,3 +96,8 @@
 .starButton .icon.bi-star-fill {
     color: gold;
 }
+/* Max altura card */
+.card-height{
+    height: 200px;
+    width: 100%;
+}
